# pi-power-butler

./: .env.example  BACKGROUND_RUNNING.md  LICENSE  README.md  calibrate_solar_ratio.py  pi-power-butler.service  pyproject.toml  requirements.txt  setup_service.sh  start_bot.sh  test_bot_flow.py  test_simple.py
src/: cache.py  config.py  main.py  mcp_alphaess.py  plotting.py  price_fetcher.py  telegram_bot.py  weather.py
tests/: test_e2e.py  test_prices.py  test_telegram_bot.py
